# Portfolio

./: .gitignore  README.md
ConstructBot/: Dockerfile  alembic.ini  auth.py  config.py  main.py  pyproject.toml
ConstructBot/alembic/: env.py
ConstructBot/alembic/versions/: b2497a5531ed_test.py
ConstructBot/constructs/: api.json
ConstructBot/src/core/: database.py  lid_connector.py  models.py  utils.py
ConstructBot/src/jobs/: jobs.py  set_jobs.py  utils.py
ConstructBot/src/pyrogram/: antiscam.py  auth.py  utils.py
ConstructBot/src/steps/: construct.py  crud_func.py  delete_message.py  handlers.py  keyboards.py  links.py  reminder.py  states.py  texts.py  video_notes.py  videos_and_photos.py
SocketApiGeneral/: Dockerfile  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml
SocketApiGeneral/migrations/: env.py
SocketApiGeneral/migrations/versions/: e7e8b9fcebae_initial_tables.py
SocketApiGeneral/nginx/: nginx.conf
SocketApiGeneral/src/core/: socket_io.py
SocketApiGeneral/src/database/: base.py
SocketApiGeneral/src/database/models/: __init__.py  core.py
SocketApiGeneral/src/database/models/general/: amocrm.py  channel.py  influencer.py  keitaro.py  lead.py  radist.py
SocketApiGeneral/src/database/models/trading_session/: session.py  signal.py  trader.py
SocketApiGeneral/src/routes/: ws_no_prefix.py
SocketApiGeneral/src/settings/: env.py
SocketApiGeneral/src/utils/: general.py
TicketBack/: Dockerfile  Procfile  docker-compose.yml  pytest.ini  requirements.txt
blog/: req.txt
lol/: for_git.odt
network/: .htaccess  (+1 more)
(+174 files in other folders)
