[tool.poetry]
name = "tg_bot_craft"
version = "0.1.0"
description = ""
authors = ["Anton Butyrin <butyrinhome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
environs = "^9.5.0"
aiogram = "3.0.0rc1"
aioredis = "^2.0.1"
aioscheduler = "^1.4.2"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.22"
psycopg2 = "^2.9.9"
apscheduler = "^3.10.4"
pyrogram = "^2.0.106"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
